# Emmio

./: .gitignore  .travis.yml  LICENSE  README.md  emmio.py  pyproject.toml  readme.md  requirements.txt  setup.py  test.py  text.go
.githooks/: pre-commit  pre-push
.github/workflows/: test.yml
c/: text.c
doc/: glossary.md
emmio/: __data.py  __init__.py  __main__.py  analysis.py  analyze.py  cards.py  config.py  core.py  data.py  database.py  dictionary.py  digraphs.json  emmio.py  entry.py  frequency.py  frequency_list.py  graph.py  language.py  learning.py  lexicon.py  main.py  network.py  parser.py  paths.py  plot.py  reader.py  run.py  sentence.py  serialization.py  server.py  teacher.py  text.py  text_util.py  timer.py  ui.py  user_data.py  util.py  worker.py
emmio/audio/: __init__.py  config.py  core.py  data.py
emmio/dictionary/: __init__.py  config.json  config.py  core.py  data.py  en_wiktionary.py  google_translate.py  ui.py
emmio/frequency/: core.py
emmio/grammar/: grammar.py
emmio/learn/: __init__.py  config.py  core.py  data.py  serialization.py  teacher.py  visualizer.py  worker.py
emmio/learning/: core.py  serialization.py  visualizer.py  worker.py
emmio/lexicon/: __init__.py  config.py  core.py  data.py  visualizer.py
emmio/listen/: __init__.py  config.py  core.py  data.py  listener.py
emmio/lists/: __init__.py  config.py  core.py  data.py  frequency_list.py  word_list.py
emmio/picture/: data.py
emmio/read/: config.py  core.py  data.py
emmio/sentence/: __init__.py  config.py  core.py  data.py  database.py  links.py  sentences.py  tatoeba.py
emmio/text/: __init__.py  config.py  core.py  data.py
emmio/user/: __init__.py  config.py  core.py  data.py
engine/: analysis.py  console.py  dictionary.py  emmio.py  frequency_list.py  graph.py  language.py  learning.py  lexicon.py  network.py  reader.py  server.py  teacher.py  ui.py  util.py
go/: go.mod  text.go
test/: lexicon.json  lexicon.yml  simple.dict
tests/: __init__.py  test_command_line.py  test_dictionary.py  test_en_wiktionary.py  test_en_wiktionary_definitions.py  test_hide.py  test_language.py  test_lexicon.py  test_lists.py  test_split.py
tests/test_command_line/: __init__.py  core.py  test_core.py  test_learn.py  test_lexicon.py  test_plot_lexicon.py  test_stat_actions.py  test_user.py
