[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Emmio"
version = "0.1"
description = "Language learning toolbox"
authors = [
    { name = "Sergey Vartanov", email = "me@enzet.ru" }
]
license = { text = "" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML~=6.0.2",
    "beartype~=0.20.0",
    "colour~=0.1.5",
    "googletrans~=4.0.2",
    "iso639-lang~=2.5.1",
    "matplotlib~=3.10.0",
    "mpv~=1.0.7",
    "numpy~=2.2.3",
    "pyTelegramBotAPI~=4.26.0",
    "pydantic~=2.10.6",
    "python-mpv~=1.0.7",
    "readchar~=4.2.1",
    "rich~=13.9.4",
    "svgwrite~=1.4.3",
    "tqdm~=4.67.1",
    "urllib3~=2.3.0",
]

[project.urls]
Homepage = "https://github.com/enzet/Emmio"

[project.scripts]
emmio = "emmio.__main__:main"

[tool.setuptools]
packages = ["emmio"]
